--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <p id="count">0</p>
         </div>
         <div id="buttons">
-            <div class="button" id="decrement" onclick="decrease()">Decrease</div>
-            <div class="button" id="increment" onclick="increase()">Tap</div>
-            <div class="button" id="reset" onclick="reset()">Reset</div>
+            <button class="button" id="decrement" onclick="decrease()">Decrease</button>
+            <button class="button" id="increment" onclick="increase()">Tap</button>
+            <button class="button" id="reset" onclick="reset()">Reset</button>
         </div>
     </div>
 
